# azcam-fastapi

./: MANIFEST.in  README.md  setup.cfg  setup.py
azcam_fastapi/: __init__.py  fastapi_server.py  test_send_json.py
azcam_fastapi/static/: index.html
